--- a/lambda_learning_linear_GD.ipynb
+++ b/lambda_learning_linear_GD.ipynb
@@ -22,7 +22,7 @@
     "import torch.optim as optim\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from ipynb.fs.full.OPART import gen_data_dict, get_data, get_cumsum, L, trace_back, error_count, write_to_csv, opart\n",
+    "from ipynb.fs.full.utility_functions import gen_data_dict, get_data, get_cumsum, error_count, write_to_csv, opart\n",
     "\n",
     "np.random.seed(123)\n",
     "torch.manual_seed(123)"
