--- a/lambda_learning_linear_SVM.ipynb
+++ b/lambda_learning_linear_SVM.ipynb
@@ -10,7 +10,7 @@
     "import numpy as np\n",
     "from sklearn import svm\n",
     "import matplotlib.pyplot as plt\n",
-    "from ipynb.fs.full.OPART import gen_data_dict, get_data, get_cumsum, L, trace_back, error_count, write_to_csv, opart"
+    "from ipynb.fs.full.utility_functions import gen_data_dict, get_data, get_cumsum, error_count, write_to_csv, opart"
    ]
   },
   {
