--- a/utility_functions.ipynb
+++ b/utility_functions.ipynb
@@ -30,9 +30,9 @@
     "    _dict = tuple(df.groupby('sequenceID'))\n",
     "    return _dict\n",
     "\n",
-    "# test\n",
-    "seqs   = gen_data_dict('sequence_label_data/signals.gz')\n",
-    "labels = gen_data_dict('sequence_label_data/labels.gz')"
+    "# # test\n",
+    "# seqs   = gen_data_dict('sequence_label_data/signals.gz')\n",
+    "# labels = gen_data_dict('sequence_label_data/labels.gz')"
    ]
   },
   {
@@ -78,18 +78,18 @@
     "\n",
     "    return sequence, neg_start_1, neg_end_1, pos_start_1, pos_end_1, neg_start_2, neg_end_2, pos_start_2, pos_end_2\n",
     "\n",
-    "# test\n",
-    "seq_id = 186\n",
-    "sequence, neg_start_1, neg_end_1, pos_start_1, pos_end_1, neg_start_2, neg_end_2, pos_start_2, pos_end_2 = get_data(seq_id, seqs, labels)\n",
-    "print(\"sequence:    \", sequence[0:5])\n",
-    "print(\"neg start 1: \", neg_start_1)\n",
-    "print(\"neg end 1    \", neg_end_1)\n",
-    "print(\"pos start 1: \", pos_start_1)\n",
-    "print(\"pos end 1:   \", pos_end_1)\n",
-    "print(\"neg start 2: \", neg_start_2)\n",
-    "print(\"neg end 2    \", neg_end_2)\n",
-    "print(\"pos start 2: \", pos_start_2)\n",
-    "print(\"pos end 2:   \", pos_end_2)"
+    "# # test\n",
+    "# seq_id = 186\n",
+    "# sequence, neg_start_1, neg_end_1, pos_start_1, pos_end_1, neg_start_2, neg_end_2, pos_start_2, pos_end_2 = get_data(seq_id, seqs, labels)\n",
+    "# print(\"sequence:    \", sequence[0:5])\n",
+    "# print(\"neg start 1: \", neg_start_1)\n",
+    "# print(\"neg end 1    \", neg_end_1)\n",
+    "# print(\"pos start 1: \", pos_start_1)\n",
+    "# print(\"pos end 1:   \", pos_end_1)\n",
+    "# print(\"neg start 2: \", neg_start_2)\n",
+    "# print(\"neg end 2    \", neg_end_2)\n",
+    "# print(\"pos start 2: \", pos_start_2)\n",
+    "# print(\"pos end 2:   \", pos_end_2)"
    ]
   },
   {
@@ -138,13 +138,13 @@
     "\n",
     "    return sequence, neg_start, neg_end, pos_start, pos_end\n",
     "\n",
-    "# test\n",
-    "toy_sequence, neg_start, neg_end, pos_start, pos_end = gen_toy_data()\n",
-    "print(\"sequence:  \", toy_sequence)\n",
-    "print(\"neg start: \", neg_start)\n",
-    "print(\"neg end    \", neg_end)\n",
-    "print(\"pos start: \", pos_start)\n",
-    "print(\"pos end:   \", pos_end)"
+    "# # test\n",
+    "# toy_sequence, neg_start, neg_end, pos_start, pos_end = gen_toy_data()\n",
+    "# print(\"sequence:  \", toy_sequence)\n",
+    "# print(\"neg start: \", neg_start)\n",
+    "# print(\"neg end    \", neg_end)\n",
+    "# print(\"pos start: \", pos_start)\n",
+    "# print(\"pos end:   \", pos_end)"
    ]
   },
   {
@@ -173,10 +173,10 @@
     "\n",
     "    return y, z\n",
     "\n",
-    "# test\n",
-    "y, z = get_cumsum(toy_sequence)\n",
-    "print(\"cumsum vector:\", y)\n",
-    "print(\"cumsum square:\", z)"
+    "# # test\n",
+    "# y, z = get_cumsum(toy_sequence)\n",
+    "# print(\"cumsum vector:\", y)\n",
+    "# print(\"cumsum square:\", z)"
    ]
   },
   {
@@ -203,13 +203,13 @@
     "    _z = z[end+1] - z[start]\n",
     "    return _z - np.square(_y)/(end-start+1)\n",
     "\n",
-    "# test\n",
-    "y, z = get_cumsum(toy_sequence)\n",
-    "print(\"sequence    : \", toy_sequence)\n",
-    "print(\"from 1 to 1 : \", L(1, 1,  y, z))\n",
-    "print(\"from 1 to 2 : \", L(1, 2,  y, z))\n",
-    "print(\"from 5 to 6 : \", L(5, 6,  y, z))\n",
-    "print(\"from 1 to 10: \", L(1, 10, y, z))"
+    "# # test\n",
+    "# y, z = get_cumsum(toy_sequence)\n",
+    "# print(\"sequence    : \", toy_sequence)\n",
+    "# print(\"from 1 to 1 : \", L(1, 1,  y, z))\n",
+    "# print(\"from 1 to 2 : \", L(1, 2,  y, z))\n",
+    "# print(\"from 5 to 6 : \", L(5, 6,  y, z))\n",
+    "# print(\"from 1 to 10: \", L(1, 10, y, z))"
    ]
   },
   {
@@ -236,9 +236,9 @@
     "        tau = tau_star[tau-1]\n",
     "    return np.append(0, chpnt)\n",
     "\n",
-    "# test\n",
-    "print(trace_back(np.array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])))\n",
-    "print(trace_back(np.array([0, 0, 0, 0, 0, 5, 5, 5, 5, 5])))"
+    "# # test\n",
+    "# print(trace_back(np.array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])))\n",
+    "# print(trace_back(np.array([0, 0, 0, 0, 0, 5, 5, 5, 5, 5])))"
    ]
   },
   {
@@ -303,16 +303,16 @@
     "\n",
     "    return T\n",
     "\n",
-    "# test\n",
-    "toy_sequence, neg_start, neg_end, pos_start, pos_end = gen_toy_data()\n",
-    "print(\"sequence:  \", toy_sequence)\n",
-    "print(\"neg start: \", neg_start)\n",
-    "print(\"neg end    \", neg_end)\n",
-    "print(\"pos start: \", pos_start)\n",
-    "print(\"pos end:   \", pos_end)\n",
+    "# # test\n",
+    "# toy_sequence, neg_start, neg_end, pos_start, pos_end = gen_toy_data()\n",
+    "# print(\"sequence:  \", toy_sequence)\n",
+    "# print(\"neg start: \", neg_start)\n",
+    "# print(\"neg end    \", neg_end)\n",
+    "# print(\"pos start: \", pos_start)\n",
+    "# print(\"pos end:   \", pos_end)\n",
     "\n",
-    "T = get_T(len(toy_sequence) - 1, neg_start, neg_end, pos_start, pos_end)\n",
-    "print(\"T:\", T)"
+    "# T = get_T(len(toy_sequence) - 1, neg_start, neg_end, pos_start, pos_end)\n",
+    "# print(\"T:\", T)"
    ]
   },
   {
@@ -354,18 +354,18 @@
     "\n",
     "    return fp_count, fn_count\n",
     "\n",
-    "# test\n",
-    "toy_sequence, neg_start, neg_end, pos_start, pos_end = gen_toy_data()\n",
-    "print(\"neg start: \", neg_start)\n",
-    "print(\"neg end    \", neg_end)\n",
-    "print(\"pos start: \", pos_start)\n",
-    "print(\"pos end:   \", pos_end)\n",
+    "# # test\n",
+    "# toy_sequence, neg_start, neg_end, pos_start, pos_end = gen_toy_data()\n",
+    "# print(\"neg start: \", neg_start)\n",
+    "# print(\"neg end    \", neg_end)\n",
+    "# print(\"pos start: \", pos_start)\n",
+    "# print(\"pos end:   \", pos_end)\n",
     "\n",
-    "chpnt = [0, 3, 5, 6, 9, 10]\n",
-    "print(chpnt, \"   :\", error_count(chpnt, neg_start, neg_end, pos_start, pos_end))\n",
+    "# chpnt = [0, 3, 5, 6, 9, 10]\n",
+    "# print(chpnt, \"   :\", error_count(chpnt, neg_start, neg_end, pos_start, pos_end))\n",
     "\n",
-    "chpnt = [0, 1, 2, 6, 8, 9, 10]\n",
-    "print(chpnt, \":\",error_count(chpnt, neg_start, neg_end, pos_start, pos_end))"
+    "# chpnt = [0, 1, 2, 6, 8, 9, 10]\n",
+    "# print(chpnt, \":\",error_count(chpnt, neg_start, neg_end, pos_start, pos_end))"
    ]
   },
   {
@@ -500,12 +500,12 @@
     "\n",
     "    return set_of_chpnt\n",
     "\n",
-    "# test\n",
-    "toy_sequence, neg_start, neg_end, pos_start, pos_end = gen_toy_data()\n",
-    "sequence_length = len(toy_sequence) - 1\n",
-    "y, z = get_cumsum(toy_sequence)\n",
-    "for lda in [0, 10, 100]:\n",
-    "    print(\"lambda = %4d: %s\" % (lda, opart(lda, toy_sequence, y, z)))"
+    "# # test\n",
+    "# toy_sequence, neg_start, neg_end, pos_start, pos_end = gen_toy_data()\n",
+    "# sequence_length = len(toy_sequence) - 1\n",
+    "# y, z = get_cumsum(toy_sequence)\n",
+    "# for lda in [0, 10, 100]:\n",
+    "#     print(\"lambda = %4d: %s\" % (lda, opart(lda, toy_sequence, y, z)))"
    ]
   },
   {
