update hinge square loss

--- a/custom_loss_function.ipynb
+++ b/custom_loss_function.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,16 +14,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(4)\n",
-      "tensor(9)\n",
-      "tensor(0)\n"
+      "tensor(4.)\n",
+      "tensor(9.)\n",
+      "tensor(0.)\n",
+      "tensor(2.5000)\n"
      ]
     }
    ],
@@ -32,7 +33,7 @@
     "class SquaredHingeLoss(nn.Module):\n",
     "    def forward(self, predicted, a, b):\n",
     "        loss = torch.relu(predicted - b) + torch.relu(a - predicted)\n",
-    "        return torch.sum(loss**2)\n",
+    "        return torch.mean(torch.square(loss), dtype=torch.float)\n",
     "\n",
     "# test\n",
     "squared_hinge_loss = SquaredHingeLoss()\n",
@@ -42,7 +43,8 @@
     "\n",
     "print(squared_hinge_loss(torch.tensor(9), a, b))\n",
     "print(squared_hinge_loss(torch.tensor(0), a, b))\n",
-    "print(squared_hinge_loss(torch.tensor(4), a, b))"
+    "print(squared_hinge_loss(torch.tensor(4), a, b))\n",
+    "print(squared_hinge_loss(torch.tensor([2, 9]), a, b))"
    ]
   },
   {
