--- a/lambda_learning_DeepLearning.ipynb
+++ b/lambda_learning_DeepLearning.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<torch._C.Generator at 0x16e755b7330>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
@@ -30,7 +41,7 @@
     "        low  = low + margin\n",
     "        high = high - margin\n",
     "        loss = torch.relu(low - predicted) + torch.relu(predicted - high)\n",
-    "        return torch.sum(loss**2)"
+    "        return torch.mean(torch.square(loss), dtype=torch.float)"
    ]
   },
   {
@@ -105,8 +116,8 @@
     "class MyModel(nn.Module):\n",
     "    def __init__(self, input_size):\n",
     "        super(MyModel, self).__init__()\n",
-    "        self.fc1 = nn.Linear(input_size, 8)\n",
-    "        self.fc2 = nn.Linear(8, 1)\n",
+    "        self.fc1 = nn.Linear(input_size, 4)\n",
+    "        self.fc2 = nn.Linear(4, 1)\n",
     "\n",
     "    def forward(self, x):\n",
     "        x = torch.relu(self.fc1(x))\n",
@@ -123,16 +134,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch     0, Loss_1: 511.9566, Loss_1_test: 676.7950, Loss_2: 748.1845, Loss_2_test: 592.4719\n",
-      "Epoch   100, Loss_1: 447.9536, Loss_1_test: 591.8817, Loss_2: 621.1607, Loss_2_test: 506.5291\n",
-      "Epoch   200, Loss_1: 429.9504, Loss_1_test: 545.2495, Loss_2: 572.0712, Loss_2_test: 498.1550\n",
-      "Epoch   300, Loss_1: 423.1816, Loss_1_test: 534.9701, Loss_2: 548.4568, Loss_2_test: 486.6062\n",
-      "Epoch   400, Loss_1: 419.2184, Loss_1_test: 537.5001, Loss_2: 523.1722, Loss_2_test: 467.8518\n",
-      "Epoch   500, Loss_1: 418.1580, Loss_1_test: 539.8295, Loss_2: 505.4540, Loss_2_test: 458.5763\n",
-      "Epoch   600, Loss_1: 417.6669, Loss_1_test: 540.8392, Loss_2: 498.7670, Loss_2_test: 455.5822\n",
-      "Epoch   700, Loss_1: 417.2258, Loss_1_test: 542.1906, Loss_2: 496.3796, Loss_2_test: 454.0469\n",
-      "Epoch   800, Loss_1: 416.8899, Loss_1_test: 542.4890, Loss_2: 494.7314, Loss_2_test: 453.2368\n",
-      "Epoch   900, Loss_1: 416.5830, Loss_1_test: 542.3828, Loss_2: 493.3104, Loss_2_test: 453.5719\n"
+      "Epoch     0, Loss_1:   1.7715, Loss_1_test:   1.8661, Loss_2:   1.8207, Loss_2_test:   1.2023\n",
+      "Epoch   100, Loss_1:   1.3177, Loss_1_test:   1.5205, Loss_2:   1.5279, Loss_2_test:   1.0895\n",
+      "Epoch   200, Loss_1:   1.0983, Loss_1_test:   1.3473, Loss_2:   1.4283, Loss_2_test:   1.0693\n",
+      "Epoch   300, Loss_1:   1.0313, Loss_1_test:   1.3128, Loss_2:   1.3716, Loss_2_test:   1.0608\n",
+      "Epoch   400, Loss_1:   1.0221, Loss_1_test:   1.3212, Loss_2:   1.3277, Loss_2_test:   1.0527\n",
+      "Epoch   500, Loss_1:   1.0188, Loss_1_test:   1.3240, Loss_2:   1.2875, Loss_2_test:   1.0479\n",
+      "Epoch   600, Loss_1:   1.0161, Loss_1_test:   1.3234, Loss_2:   1.2679, Loss_2_test:   1.0510\n",
+      "Epoch   700, Loss_1:   1.0142, Loss_1_test:   1.3248, Loss_2:   1.2595, Loss_2_test:   1.0565\n",
+      "Epoch   800, Loss_1:   1.0136, Loss_1_test:   1.3251, Loss_2:   1.2534, Loss_2_test:   1.0608\n",
+      "Epoch   900, Loss_1:   1.0136, Loss_1_test:   1.3239, Loss_2:   1.2476, Loss_2_test:   1.0638\n"
      ]
     }
    ],
@@ -197,8 +208,8 @@
      "data": {
       "text/plain": [
        "MyModel(\n",
-       "  (fc1): Linear(in_features=3, out_features=8, bias=True)\n",
-       "  (fc2): Linear(in_features=8, out_features=1, bias=True)\n",
+       "  (fc1): Linear(in_features=3, out_features=4, bias=True)\n",
+       "  (fc2): Linear(in_features=4, out_features=1, bias=True)\n",
        ")"
       ]
      },
@@ -228,8 +239,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loss for fold 2:  533.0552978515625\n",
-      "loss for fold 1:  453.1891784667969\n"
+      "loss for fold 2:  1.3113869428634644\n",
+      "loss for fold 1:  1.047221064567566\n"
      ]
     }
    ],
@@ -284,7 +295,7 @@
     "    row.append(sum(err_1))\n",
     "    row.append(sum(err_2))\n",
     "\n",
-    "    write_to_csv('learning_output/deep.csv', header, row)"
+    "    write_to_csv('learning_output/deep_2.csv', header, row)"
    ]
   }
  ],
