--- a/error_rate.ipynb
+++ b/error_rate.ipynb
@@ -18,7 +18,8 @@
     "BIC_df        = pd.read_csv('learning_output/BIC.csv')\n",
     "linear_svm_df = pd.read_csv('learning_output/linear_SVM.csv')\n",
     "linear_gd_df  = pd.read_csv('learning_output/linear_GD.csv')\n",
-    "deep_df       = pd.read_csv('learning_output/deep.csv')"
+    "deep_df       = pd.read_csv('learning_output/deep.csv')\n",
+    "deep2_df      = pd.read_csv('learning_output/deep_2.csv')"
    ]
   },
   {
@@ -33,12 +34,13 @@
       "method:        BIC \t fold1.test: 72.74 \t fold2.test: 60.58\n",
       "method: linear-svm \t fold1.test: 76.46 \t fold2.test: 65.96\n",
       "method:  linear-gd \t fold1.test: 76.60 \t fold2.test: 66.15\n",
-      "method:       deep \t fold1.test: 81.91 \t fold2.test: 73.85\n"
+      "method:       deep \t fold1.test: 81.91 \t fold2.test: 73.85\n",
+      "method:      deep2 \t fold1.test: 80.80 \t fold2.test: 72.25\n"
      ]
     }
    ],
    "source": [
-    "for df in [BIC_df, linear_svm_df, linear_gd_df, deep_df]:\n",
+    "for df in [BIC_df, linear_svm_df, linear_gd_df, deep_df, deep2_df]:\n",
     "    if(df is BIC_df):\n",
     "        method = \"BIC\"\n",
     "    elif(df is linear_svm_df):\n",
@@ -47,6 +49,8 @@
     "        method = \"linear-gd\"\n",
     "    elif(df is deep_df):\n",
     "        method = \"deep\"\n",
+    "    elif(df is deep2_df):\n",
+    "        method = \"deep2\"\n",
     "\n",
     "    fold1_total_errs = df['fold_2_errs'].sum()\n",
     "    fold2_total_errs = df['fold_2_errs'].sum()\n",
