--- a/lambda_learning_linear_GD.ipynb
+++ b/lambda_learning_linear_GD.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x1b3ccbbb230>"
+       "<torch._C.Generator at 0x1acfd6bb330>"
       ]
      },
      "execution_count": 1,
@@ -41,7 +41,7 @@
     "        low  = low + margin\n",
     "        high = high - margin\n",
     "        loss = torch.relu(low - predicted) + torch.relu(predicted - high)\n",
-    "        return torch.sum(loss**2)"
+    "        return torch.mean(torch.square(loss), dtype=torch.float)"
    ]
   },
   {
@@ -94,17 +94,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [    0/5000], Loss_1: 622.5753, Loss_1_test: 660.8674, Loss_2: 650.6815, Loss_2_test: 536.5028\n",
-      "Epoch [  500/5000], Loss_1: 462.6325, Loss_1_test: 627.6062, Loss_2: 552.7117, Loss_2_test: 469.7195\n",
-      "Epoch [ 1000/5000], Loss_1: 443.0288, Loss_1_test: 611.2742, Loss_2: 550.0253, Loss_2_test: 478.2300\n",
-      "Epoch [ 1500/5000], Loss_1: 440.2346, Loss_1_test: 612.4555, Loss_2: 550.0333, Loss_2_test: 479.8304\n",
-      "Epoch [ 2000/5000], Loss_1: 439.9647, Loss_1_test: 612.0368, Loss_2: 550.0263, Loss_2_test: 478.5681\n",
-      "Epoch [ 2500/5000], Loss_1: 439.9647, Loss_1_test: 612.0660, Loss_2: 550.0080, Loss_2_test: 479.1656\n",
-      "Epoch [ 3000/5000], Loss_1: 439.9647, Loss_1_test: 612.0739, Loss_2: 550.0074, Loss_2_test: 479.1956\n",
-      "Epoch [ 3500/5000], Loss_1: 439.9647, Loss_1_test: 612.0749, Loss_2: 550.0189, Loss_2_test: 479.6470\n",
-      "Epoch [ 4000/5000], Loss_1: 439.9647, Loss_1_test: 612.0750, Loss_2: 550.0118, Loss_2_test: 479.0440\n",
-      "Epoch [ 4500/5000], Loss_1: 439.9647, Loss_1_test: 612.0750, Loss_2: 550.0013, Loss_2_test: 479.4181\n",
-      "Epoch [ 5000/5000], Loss_1: 439.9647, Loss_1_test: 612.0750, Loss_2: 550.0230, Loss_2_test: 478.6756\n"
+      "Epoch [    0/5000], Loss_1:   1.5074, Loss_1_test:   1.6002, Loss_2:   1.5755, Loss_2_test:   1.2990\n",
+      "Epoch [  500/5000], Loss_1:   1.1202, Loss_1_test:   1.5196, Loss_2:   1.3383, Loss_2_test:   1.1373\n",
+      "Epoch [ 1000/5000], Loss_1:   1.0727, Loss_1_test:   1.4801, Loss_2:   1.3318, Loss_2_test:   1.1579\n",
+      "Epoch [ 1500/5000], Loss_1:   1.0659, Loss_1_test:   1.4829, Loss_2:   1.3318, Loss_2_test:   1.1618\n",
+      "Epoch [ 2000/5000], Loss_1:   1.0653, Loss_1_test:   1.4819, Loss_2:   1.3318, Loss_2_test:   1.1588\n",
+      "Epoch [ 2500/5000], Loss_1:   1.0653, Loss_1_test:   1.4820, Loss_2:   1.3317, Loss_2_test:   1.1602\n",
+      "Epoch [ 3000/5000], Loss_1:   1.0653, Loss_1_test:   1.4820, Loss_2:   1.3317, Loss_2_test:   1.1603\n",
+      "Epoch [ 3500/5000], Loss_1:   1.0653, Loss_1_test:   1.4820, Loss_2:   1.3318, Loss_2_test:   1.1614\n",
+      "Epoch [ 4000/5000], Loss_1:   1.0653, Loss_1_test:   1.4820, Loss_2:   1.3317, Loss_2_test:   1.1599\n",
+      "Epoch [ 4500/5000], Loss_1:   1.0653, Loss_1_test:   1.4820, Loss_2:   1.3317, Loss_2_test:   1.1608\n",
+      "Epoch [ 5000/5000], Loss_1:   1.0653, Loss_1_test:   1.4820, Loss_2:   1.3318, Loss_2_test:   1.1590\n"
      ]
     }
    ],
